@@ -11,7 +11,7 @@ mm_min_matches = 200
 mm_min_matches_preference = 1.0
 
 # [SHOW]
-show_output = "table" # format of the output, allowd values: table, csv, json; you can override this via --output
+show_output = "table" # default format of the output, allowed values: table, csv, json; you can override this via --output
 
 show_progress = true # is progress bar visible during ranking recalculation
 
@@ -27,12 +27,14 @@ date_format = "%Y/%m/%d %H:%M:%S" # more about the format: https://docs.python.o
 # .X at the end means that the values of the column are going to be rounded to X decimals
 # PDATA:X means that the column is going to be filled with PDATA (player_data) averaged over all games
 # PDATA_ALL expands to all PDATA present in the games file (note that ? & .X doesn't work with PDATA_ALL)
-leaderboard = "POS,NAME,SCORE.2,GAMES,PERCENTAGE,MU.3,SIGMA.3,ACTIVE?,ERRORS?,PDATA_ALL,DATE,DESCRIPTION?"
+leaderboard = "POS,NAME,SCORE.2,GAMES,PERCENTAGE,MU.3,SIGMA.3?,ACTIVE?,ERRORS?,PDATA_ALL,DATE,DESCRIPTION?"
 
 # [RANKING MODEL]
 model = "trueskill"
-draw_prob = 0.0001
-tau = 0.00025
+model_draw_prob = 0.0001 # trueskill
+model_tau = 0.002 # trueskill / openskill
+model_alpha = 0.0001 # global: regularization
+model_scale = 3.64 # global: applied linear scale to the result (the goal of default value is to have the similar scale as trueskill)
 
 # [COMMANDS]
 # there are special keywords (in the form of %KEYWORD%) that are going to be replaced when the command is executed
